--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,8 @@ commands:
       - run:
           name: Install Ansible
           command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
+           apk update
+           apk add --update --no-cache ansible
   destroy-environment:
     description: Destroy front-end and back-end cloudformation stacks.
     parameters:
