--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,9 @@ commands:
     steps:
       - run:
           name: Install curl
-          command: sudo apt-get update && sudo apt-get install -y curl
-      - run:
-          name: Install AWS CLI
           command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
+            su -
+            apt-get update && apt-get install -y curl
   install_nodejs:
      description: Install Node.js 13
      steps:
