--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,18 +7,22 @@ commands:
       - run:
           name: Install AWS CLI
           command: pip install awscli
-  install_nodejs:
+          
+install_nodejs:
     description: Install Node.js 13
     steps:
       - run:
+          name: Install NVM
+          command: |
+            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+      - run:
           name: Install Node.js 13
           command: |
-            if ! command -v sudo >/dev/null 2>&1; then
-              apt-get update
-              apt-get install -y sudo
-            fi
-            curl -sL https://deb.nodesource.com/setup_13.x | sudo -E bash -
-            sudo apt-get install -y nodejs
+            nvm install 13
+
   install_ansible:
     description: Install Ansible
     steps:
