--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,22 +7,16 @@ commands:
       - run:
           name: Install AWS CLI
           command: pip install awscli
-          
-install_nodejs:
+
+  install_nodejs:
     description: Install Node.js 13
     steps:
       - run:
-          name: Install NVM
-          command: |
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
-            [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
-      - run:
           name: Install Node.js 13
           command: |
-            nvm install 13
-
+            sudo npm install -g n
+            sudo n 13
+            
   install_ansible:
     description: Install Ansible
     steps:
